--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="https://hyunjin912.github.io/Save/index.html"><img width="60px" height="60px" src="assets/blogicon/m.png" alt="로고"></a>
+                <a class="brand" href="https://hyunjin912.github.io/portfolio/"><img width="60px" height="60px" src="assets/blogicon/m.png" alt="로고"></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://skyhyunjinlee.tistory.com">Tistory</a></li>
