--- a/css3/border-radius/index.html
+++ b/css3/border-radius/index.html
@@ -82,7 +82,7 @@
     <div class="bs-header bgs3" id="content">
         <div class="container">
             <h1>Border-radius Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://hyunjin912.github.io/Save/index.html" target="_blank">hyunjin912.github.io/Save/index.html</a></p>
+            <p><a href="https://hyunjin912.github.io/portfolio/" target="_blank">hyunjin912.github.io/portfolio/</a></p>
         </div>
     </div>
 
