--- a/slider/slide04.html
+++ b/slider/slide04.html
@@ -89,6 +89,7 @@
             <li><a href="slide06.html">slider06</a></li>
             <li><a href="slide07.html">slider07</a></li>
             <li><a href="slide08.html">slider08</a></li>
+            <li><a href="slide09.html">slider09</a></li>
         </ul>
     </div>
 
