--- a/slider/slide07.html
+++ b/slider/slide07.html
@@ -105,6 +105,7 @@
             <li><a href="slide06.html">slider06</a></li>
             <li class="active"><a href="slide07.html">slider07</a></li>
             <li><a href="slide08.html">slider08</a></li>
+            <li><a href="slide09.html">slider09</a></li>
         </ul>
     </div>
 
