--- a/mouse/mouse01.html
+++ b/mouse/mouse01.html
@@ -197,6 +197,16 @@
         //     document.querySelector(".pageY").innerHTML = event.pageY
         //     document.querySelector(".screenX").innerHTML = event.screenX
         //     document.querySelector(".screenY").innerHTML = event.screenY
+
+        //     document.querySelector(".cursor").style.left = event.clientX;
+        //     document.querySelector(".cursor").style.top = event.clientY;
+        // });
+
+        // document.querySelector(".contents a").addEventListener("mouseenter", function(event){
+        //     document.querySelector(".cursor").style.borderColor = "orange"
+        // });
+        // document.querySelector(".contents a").addEventListener("mouseleave", function(event){
+        //     document.querySelector(".cursor").style.borderColor = "white"
         // });
      </script>
 </body>
