--- a/port/index.html
+++ b/port/index.html
@@ -31,6 +31,22 @@
                 </div>
             </header>
         </div>
+
+        <section id="siteWrap">
+            <div class="site">
+                <div class="siteTitle">WEB STANDARD</div>
+                <div class="sTit">WEBSITE</div>
+                <div class="siteImg"></div>
+                <div class="siteNum">01</div>
+                <a class="viewCodeWrap" href="#">
+                    <div class="viewCode">
+                        <div class="viewtext">
+                            VIEW CODE
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
     </div>
 
     <script src="js/jquery.min_1.12.4.js"></script>
@@ -40,7 +56,7 @@
             $(".firstLogo").css("opacity", "0");
             $(".secondLogo").css("opacity", "1");
         };
-        setTimeout(logoStart, 1000);
+        setTimeout(logoStart, 1300);
     </script>
 </body>
 </html>
