--- a/port/index3.html
+++ b/port/index3.html
@@ -36,12 +36,20 @@
 
         <div id="section2">
             <div class="section2">
+                <div class="img-wrap"><img src="img/webstandard.jpg" alt="웹표준사이트"></div>
                 <h2>webstandard</h2>
-                <h3>01</h3>
-                <h4>website</h3>
+                <svg height="20vw">
+                    <text text-anchor="middle" alignment-baseline="middle" stroke="#ccc" stroke-width="3" fill="none" x="77vw" y="13vw" font-size="20vw" font-family= "Rubik, sans-serif" font-weight="900">01</text>
+                </svg>
+                <a class="circle" href="#">
+                    VIEW CODE
+                </a>
             </div>
         </div>
         <!-- //section2 -->
+        <!-- <svg class="svg">
+            <text x="5" y="105" font-size="70" font-family="Black Han Sans">SVG</text>
+        </svg> -->
 
 
 
