--- a/port/index3.html
+++ b/port/index3.html
@@ -36,20 +36,18 @@
 
         <div id="section2">
             <div class="section2">
-                <div class="img-wrap"><img src="img/webstandard.jpg" alt="웹표준사이트"></div>
+                <div class="img-wrap">
+                    <img src="img/webstandard.jpg" alt="웹표준사이트">
+                </div>
                 <h2>webstandard</h2>
-                <svg height="20vw">
-                    <text text-anchor="middle" alignment-baseline="middle" stroke="#ccc" stroke-width="3" fill="none" x="77vw" y="13vw" font-size="20vw" font-family= "Rubik, sans-serif" font-weight="900">01</text>
-                </svg>
+                <div class="num-wrap">
+                    <div class="num">01</div>
+                </div>
                 <a class="circle" href="#">
                     VIEW CODE
                 </a>
             </div>
         </div>
-        <!-- //section2 -->
-        <!-- <svg class="svg">
-            <text x="5" y="105" font-size="70" font-family="Black Han Sans">SVG</text>
-        </svg> -->
 
 
 
@@ -59,5 +57,8 @@
 
 
     <script src="js/jquery.min_1.12.4.js"></script>
+    <script>
+       
+    </script>
 </body>
 </html>
