--- a/port/index3.html
+++ b/port/index3.html
@@ -18,7 +18,9 @@
             <div class="container">
                 <div class="section1">
                     <div class="s1-title">
-                        <h1>생각을 거듭하다</h1>
+                        <h1>
+                            <span>생</span><span>각</span><span>을 </span><span>거</span><span>듭</span><span>하</span><span>다</span>
+                        </h1>
                         <p>Thinking = Thinking + Thinking</p>
                     </div>
                     <div class="s1-desc">
@@ -31,11 +33,12 @@
                     </div>
                 </div>
             </div>
+            <!-- //container -->
         </div>
         <!-- //section1 -->
 
         <div id="section2">
-            <div class="section2">
+            <div class="section2 allsite">
                 <div class="img-wrap">
                     <img src="img/webstandard.jpg" alt="웹표준사이트">
                 </div>
@@ -48,13 +51,66 @@
                 </a>
             </div>
         </div>
+        <!-- //section2 -->
+
+        <div id="section3">
+            <div class="section3 allsite">
+                <div class="img-wrap">
+                    <img src="img/responsive.jpg" alt="반응형사이트">
+                </div>
+                <h2>responsive</h2>
+                <div class="num-wrap">
+                    <div class="num">02</div>
+                </div>
+                <a class="circle" href="#">
+                    VIEW CODE
+                </a>
+            </div>
+        </div>
+        <!-- //section3 -->
+
+        <div id="section4">
+            <div class="section4 allsite">
+                <div class="img-wrap">
+                    <img src="img/nongshim.jpg" alt="농심사이트">
+                </div>
+                <h2>nongshim</h2>
+                <div class="num-wrap">
+                    <div class="num">03</div>
+                </div>
+                <a class="circle" href="#">
+                    VIEW CODE
+                </a>
+            </div>
+        </div>
+        <!-- //section4 -->
+
+        <div id="section5">
+            <div class="section5 allsite">
+                <div class="img-wrap">
+                    <img src="img/ptdime1.jpg" alt="피티다임사이트">
+                </div>
+                <h2>ptdime</h2>
+                <div class="num-wrap">
+                    <div class="num">04</div>
+                </div>
+                <a class="circle" href="#">
+                    VIEW CODE
+                </a>
+            </div>
+        </div>
+        <!-- //section5 -->
+
+        
+
+
 
 
 
 
 
     </section>
-
+    <!-- //contents -->
 
     <script src="js/jquery.min_1.12.4.js"></script>
     <script>
