--- a/script/parallax/parallax02.html
+++ b/script/parallax/parallax02.html
@@ -172,6 +172,8 @@
             <li><a href="parallax06.html">parallax06</a></li>
             <li><a href="parallax07.html">parallax07</a></li>
             <li><a href="parallax08.html">parallax08</a></li>
+            <li><a href="parallax09.html">parallax09</a></li>
+            <li><a href="parallax10.html">parallax10</a></li>
         </ul>
     </div>
 
