--- a/script/parallax/parallax03.html
+++ b/script/parallax/parallax03.html
@@ -163,7 +163,7 @@
 
         /* info */
         .info {
-            position: fixed; top: 370px; right: 20px;
+            position: fixed; top: 420px; right: 20px;
             background: rgba(255,255,255,0.4);
             color: #fff; padding: 10px;
             font-size: 14px; font-weight: 300;
@@ -178,7 +178,28 @@
         .contents > section.show {
             opacity: 1; transform: translateY(0);
         }
+
+        .infor4 {position: fixed; right: 0; bottom: 50px; z-index: 1000; padding: 20px;}
+        .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
+        .infor4 .modal {
+            background: rgba(0,0,0,0.8);
+            width: 100%;
+            height: 100vh;
+            position: fixed;
+            top: 100%;
+            left: 0;
+            transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
+        }
+        .infor4 .modal.show {
+            top: 0;
+        }
+        .infor4 .modal .close {
+            position: absolute; right: 10px; top: 20px;
+            cursor: pointer;
+        }
     </style>
+
+    <link rel="stylesheet" href="../../mouse/prism.css">
 </head>
 <body>
     <div class="title">
@@ -193,6 +214,8 @@
             <li><a href="parallax06.html">parallax06</a></li>
             <li><a href="parallax07.html">parallax07</a></li>
             <li><a href="parallax08.html">parallax08</a></li>
+            <li><a href="parallax09.html">parallax09</a></li>
+            <li><a href="parallax10.html">parallax10</a></li>
         </ul>
     </div>
 
@@ -207,6 +230,138 @@
         <span>#section7 offset : <strong class="s7OT">0</strong>px</span><br>
         <span>#section8 offset : <strong class="s8OT">0</strong>px</span><br>
         <span>#section9 offset : <strong class="s9OT">0</strong>px</span><br>
+    </div>
+
+    <div class="infor4">
+        <a href="#" class="view">코드 보기</a>
+        <!-- modal -->
+        <div class="modal">
+            <div class="code-editor">
+                <h3>Script Editor
+                    <span class="control"></span>
+                    <span class="control"></span>
+                    <span class="control"></span>
+                </h3>
+                <div class="code">
+                    <pre class="line-numbers"><code class="language-js">$(window).scroll(function(){
+console.log("1. window height: "+$(window).height()/2);
+
+console.log("2. window scrollTop: "+$(window).scrollTop());
+
+const scrollTop = $(window).scrollTop() + $(window).height()/2;
+$(".scrollTop").text(scrollTop);
+
+// $(".s1OT").text( parseInt( $("#section1").offset().top ) );
+// $(".s2OT").text( parseInt( $("#section2").offset().top ) );
+// $(".s3OT").text( parseInt( $("#section3").offset().top ) );
+// $(".s4OT").text( parseInt( $("#section4").offset().top ) );
+// $(".s5OT").text( parseInt( $("#section5").offset().top ) );
+// $(".s6OT").text( parseInt( $("#section6").offset().top ) );
+// $(".s7OT").text( parseInt( $("#section7").offset().top ) );
+// $(".s8OT").text( parseInt( $("#section8").offset().top ) );
+// $(".s9OT").text( parseInt( $("#section9").offset().top ) );
+
+//위를 for문으로 간소화
+for (let i = 1; i &lt;= 9; i++){
+    $(".s"+i+"OT").text( parseInt( $("#section"+i).offset().top ) );
+}
+
+// if( scrollTop > parseInt( $("#section1").offset().top ) ){
+//     $(".s1OT").css("color","red");
+// } else {
+//     $(".s1OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section2").offset().top ) ){
+//     $(".s2OT").css("color","red");
+// }  else {
+//     $(".s2OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section3").offset().top ) ){
+//     $(".s3OT").css("color","red");
+// } else {
+//     $(".s3OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section4").offset().top ) ){
+//     $(".s4OT").css("color","red");
+// } else {
+//     $(".s4OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section5").offset().top ) ){
+//     $(".s5OT").css("color","red");
+// } else {
+//     $(".s5OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section6").offset().top ) ){
+//     $(".s6OT").css("color","red");
+// } else {
+//     $(".s6OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section7").offset().top ) ){
+//     $(".s7OT").css("color","red");
+// } else {
+//     $(".s7OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section8").offset().top ) ){
+//     $(".s8OT").css("color","red");
+// } else {
+//     $(".s8OT").css("color","black");
+// }
+// if( scrollTop > parseInt( $("#section9").offset().top ) ){
+//     $(".s9OT").css("color","red");
+// } else {
+//     $(".s9OT").css("color","black");
+// }
+
+// 위를 for문으로 변경
+for (let i = 1; i &lt;= 9; i++){
+    if( scrollTop > parseInt( $("#section"+i).offset().top ) ){
+        $(".s"+i+"OT").css("color","red");
+    } else {
+        $(".s"+i+"OT").css("color","black");
+    }
+}
+//수작업
+// if( scrollTop > parseInt( $("#section1").offset().top ) ){
+//     $("#section1").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section2").offset().top ) ){
+//     $("#section2").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section3").offset().top ) ){
+//     $("#section3").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section4").offset().top ) ){
+//     $("#section4").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section5").offset().top ) ){
+//     $("#section5").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section6").offset().top ) ){
+//     $("#section6").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section7").offset().top ) ){
+//     $("#section7").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section8").offset().top ) ){
+//     $("#section8").addClass("show");
+// }
+// if( scrollTop > parseInt( $("#section9").offset().top ) ){
+//     $("#section9").addClass("show");
+// }
+
+//한번에
+$(".content-item").each(function(){
+    if( scrollTop > $(this).offset().top ){
+        $(this).addClass("show");
+    }
+});
+});
+</code></pre>
+                </div>
+
+            </div>
+            <a class="close">Close</a>
+        </div>
     </div>
 
     <section id="wrap">
@@ -289,6 +444,7 @@
 
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="../../mouse/prism.js"></script>
     <script>
         $(window).scroll(function(){
             console.log("1. window height: "+$(window).height()/2);
