--- a/script/parallax/parallax05.html
+++ b/script/parallax/parallax05.html
@@ -176,7 +176,28 @@
             font-style: normal;
             font-family: "Abel";
         }
+
+        .infor4 {position: fixed; right: 0; bottom: 50px; z-index: 1000; padding: 20px;}
+        .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
+        .infor4 .modal {
+            background: rgba(0,0,0,0.8);
+            width: 100%;
+            height: 100vh;
+            position: fixed;
+            top: 100%;
+            left: 0;
+            transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
+        }
+        .infor4 .modal.show {
+            top: 0;
+        }
+        .infor4 .modal .close {
+            position: absolute; right: 10px; top: 20px;
+            cursor: pointer;
+        }
     </style>
+
+    <link rel="stylesheet" href="../../mouse/prism.css">
 </head>
 <body>
 
@@ -196,7 +217,65 @@
             <li><a href="parallax06.html">parallax06</a></li>
             <li><a href="parallax07.html">parallax07</a></li>
             <li><a href="parallax08.html">parallax08</a></li>
+            <li><a href="parallax09.html">parallax09</a></li>
+            <li><a href="parallax10.html">parallax10</a></li>
         </ul>
+    </div>
+
+    <div class="infor4">
+        <a href="#" class="view">코드 보기</a>
+        <!-- modal -->
+        <div class="modal">
+            <div class="code-editor">
+                <h3>Script Editor
+                    <span class="control"></span>
+                    <span class="control"></span>
+                    <span class="control"></span>
+                </h3>
+                <div class="code">
+                    <pre class="line-numbers"><code class="language-js">$(window).scroll(function(){
+    let scrollTop = $(window).scrollTop();
+
+    $(".scrollTop").text(scrollTop);
+
+$("#wrap h1").css({transform: "translateX("+scrollTop+"px)"});
+
+// let offset1 = (scrollTop - $("#section1").offset().top);
+// let offset2 = (scrollTop - $("#section2").offset().top);
+// let offset3 = (scrollTop - $("#section3").offset().top);
+// let offset4 = (scrollTop - $("#section4").offset().top);
+// let offset5 = (scrollTop - $("#section5").offset().top);
+// let offset6 = (scrollTop - $("#section6").offset().top);
+// let offset7 = (scrollTop - $("#section7").offset().top);
+// let offset8 = (scrollTop - $("#section8").offset().top);
+// let offset9 = (scrollTop - $("#section9").offset().top);
+$(".content-item").each(function(){
+    let offset1 = (scrollTop - $(this).offset().top) * 0.1;
+    let offset2 = (scrollTop - $(this).offset().top) * 0.2;
+    let offset3 = (scrollTop - $(this).offset().top) * 0.3;
+
+    $(this).find(".content-item-desc").css({"transform":"translateY("+ -offset1+"px)"})
+    $(this).find(".content-item-num").css({"transform":"translateY("+ offset2+"px)"})
+    $(this).find(".content-item-img").css({"transform":"translateX("+ offset3+"px)"})
+    
+});
+
+//     $("#section1 .content-item-desc").css({transform: "translateX("+offset1+"px)"});
+//     $("#section2 .content-item-desc").css({transform: "translateX("+offset2+"px)"});
+//     $("#section3 .content-item-desc").css({transform: "translateX("+offset3+"px)"});
+//     $("#section4 .content-item-desc").css({transform: "translateX("+offset4+"px)"});
+//     $("#section5 .content-item-desc").css({transform: "translateX("+offset5+"px)"});
+//     $("#section6 .content-item-desc").css({transform: "translateX("+offset6+"px)"});
+//     $("#section7 .content-item-desc").css({transform: "translateX("+offset7+"px)"});
+//     $("#section8 .content-item-desc").css({transform: "translateX("+offset8+"px)"});
+//     $("#section9 .content-item-desc").css({transform: "translateX("+offset9+"px)"});
+});
+</code></pre>
+                </div>
+
+            </div>
+            <a class="close">Close</a>
+        </div>
     </div>
 
     <!-- parallax -->
@@ -280,6 +359,7 @@
 
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="../../mouse/prism.js"></script>
     <script>
         $(window).scroll(function(){
             let scrollTop = $(window).scrollTop();
