--- a/port/index3.html
+++ b/port/index3.html
@@ -18,9 +18,7 @@
             <div class="container">
                 <div class="section1">
                     <div class="s1-title">
-                        <h1>
-                            <span>생</span><span>각</span><span>을 </span><span>거</span><span>듭</span><span>하</span><span>다</span>
-                        </h1>
+                        <h1>생각을 거듭하다</h1>
                         <p>Thinking = Thinking + Thinking</p>
                     </div>
                     <div class="s1-desc">
