--- a/port/index3.html
+++ b/port/index3.html
@@ -40,7 +40,7 @@
                 <div class="img-wrap">
                     <img src="img/webstandard.jpg" alt="웹표준사이트">
                 </div>
-                <h2>webstandard</h2>
+                <h2>standard</h2>
                 <div class="num-wrap">
                     <div class="num">01</div>
                 </div>
@@ -54,7 +54,7 @@
         <div id="section3">
             <div class="section3 allsite">
                 <div class="img-wrap">
-                    <img src="img/responsive.jpg" alt="반응형사이트">
+                    <img src="img/responsive1.jpg" alt="반응형사이트">
                 </div>
                 <h2>responsive</h2>
                 <div class="num-wrap">
